# compass

./: README.md  package.json
backend/: .gitignore  completion_raw.json  completion_schema.json  main.py  main_groq.py  models.py  prompts.txt  pyproject.toml  requirements.txt  run.sh  test.py  testing_json.json
backend/app/: Makefile  completion_raw.json  completion_schema.json  main.py  models.py  patch.py  prompts.txt  run.bat  run.sh  server_logging.py
backend/app/old/: main.py
frontend/: index.html  package-lock.json  tsconfig.json
frontend/src/: App.svelte  App_new.svelte  BoxSignal.ts  DraggableBox.svelte  FiberSignal.ts  PreloadingIndicator.svelte  SharedPlayer.ts  api.ts  app.css  fetch_types.ts  global_ref.ts  index.tsx  instantiate.ts  main.ts  util.svelte.ts  util.ts
frontend/src/lib/: Counter.svelte
frontend/src/node_interface/: FiberInterface.ts
frontend/src/nodes/: Box copy.ts  Box.ts  Compass.ts  Detector.ts  Fiber.ts  FiberAnimated.ts  Laser.ts  Switch.ts  util.ts
src/: App.svelte
