[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Andrew Mueller <andrewstermueller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.3"}
instructor = "^1.3.7"
python-dotenv = "^1.0.1"
groq = "^0.9.0"
anthropic = "^0.32.0"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
